tests/rosetta/out/OCaml/abc-problem.error
ocamlc: exit status 2
File "/tmp/abc-problem.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Abc-problem" is not a valid module name.
File "/tmp/abc-problem.ml", line 44, characters 18-24:
44 |           cur := ((!cur) + c);
                       ^^^^^^
Error: This expression has type string but an expression was expected of type
         int
